...
    <string name="date_minutes">hace %1$d min</string>
    <string name="date_hours">hace %1$d h</string>
    <string name="date_yesterday">ayer</string>
    <string name="date_days">hace %1$d días</string>

    <!-- Menú contextual -->
    <string name="menu_play">Jugar</string>
    <string name="menu_details">Ver detalle</string>
    <string name="menu_favorite_add">Añadir a favoritos</string>
    <string name="menu_favorite_remove">Quitar de favoritos</string>
    <string name="menu_game_settings">Ajustes del juego</string>
    <string name="menu_hide">Ocultar de PocketGB</string>

...
